Add niceserver.yml opts and backport 26.2 Paper server bugfixes.
Gate hot-path events behind niceserver.yml and apply portable Paper PR fixes for velocity cancel loops, villager ingredients, chest datapack GUIs, and related crashes.